# job-portal

./: .env.example  .gitignore  DELL_SERVER_CONTEXT.md  DEPLOYMENT.md  GuideSDDG.md  README.md  SETUP_EXPLAINED.md  backend_arch.plantuml  cloudflared-config.yml  compose.dev.yml  compose.prod.yml  compose.server.yml  compose.yml  database_design.plantuml  frontPrompt.txt  main.tex  nmandca.odt  package-lock.json  readme.md  references.bib  references.txt  requirements.txt  start.sh
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  conftest.py  database.py  dependencies.py  exceptions.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  utils.py
backend/.github/workflows/: backend-tests.yml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  2026_01_21_1716-18988acdd0f6_initial_migration.py  2026_01_21_1800-3fff8f2234d0_remove_password_column_from_user_table.py
backend/app/: database.py  dependencies.py  main.py  requirements.txt
backend/app/models/: __init__.py  (+4 more)
backend/models/: admin.py  application.py  base.py  employer.py  job.py  job_seeker.py
backend/routers/: auth.py  employers.py  job_seekers.py
backend/schemas/: __init__.py  admin.py  application.py  employer.py
backend/services/: application.py  auth.py  employer.py  job_seeker.py
backend/src/: main.py  security.py
backend/tests/: conftest.py  test_employer.py
backend/utils/: security.py
job-portal-api/: alembic.ini  guide.md  pyproject.toml  requirements.txt
job-portal-api/alembic/: env.py
job-portal-api/src/: main.py  security.py
(+149 files in other folders)
