Sure, here's the contents for the file: /job-portal-api/job-portal-api/pyproject.toml

[tool.poetry]
name = "job-portal-api"
version = "0.1.0"
description = "A job portal API built with FastAPI and SQLModel."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.0"
sqlmodel = "^0.0.6"
uvicorn = "^0.15.0"
alembic = "^1.7.0"
psycopg2 = "^2.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"